# shrike

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
demos/: README.md
demos/vulnerable-stack/: files-mcp.json  github-mcp.json  jira-mcp.json  notes-mcp.json  weather-mcp.json
docs/: architecture.md  findings-reference.md  self-hosting.md  threat-model.md
shrike/: __init__.py  agent.py  atlas.py  cli.py  discover.py  engine.py  fix.py  llm.py  report.py  sigs.py  triage.py
shrike/signatures/: exfiltration.json  jailbreak.json  obfuscation.json  prompt_injection.json  tool_poisoning.json
tests/: conftest.py  corpus.py  test_correlations.py  test_engine_matrix.py  test_shrike.py  test_signatures.py
