[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shrike-sec"
version = "1.1.0"
description = "The autonomous security agent for your AI stack — discovers your MCP servers and agent tools, finds the vulnerabilities, and writes the fixes, on a local model."
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["ai-security", "mcp", "mcp-server", "agent-security", "llm-security", "mitre-atlas",
            "owasp-llm", "prompt-injection", "autonomous-agent", "self-hosted", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/shrike"
Documentation = "https://github.com/cognis-digital/shrike/tree/main/docs"
Discussions = "https://github.com/cognis-digital/shrike/discussions"

[project.scripts]
shrike = "shrike.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["shrike"]
artifacts = ["shrike/signatures/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
